syntax = "proto3";

option csharp_namespace = "UniversityGRPC";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}


//  -------------------     Parte de University ------------------------

service University {
  rpc Login (Credenciales) returns (JwtToken);
  rpc ListaAdministradores (Nada) returns (ListaAdmin);
  rpc EnviarMsgChat(Texto) returns (Nada);
}

message Credenciales {
	string login = 1;
	string passwd = 2;
}

message JwtToken {
	string token = 1;
}

message Texto {
    string Valor = 1;
}

message Nada {

}

message AdministradorR {
	int32 id = 1;
    int32 idPersona = 2;
    string dni = 3;
    string direc = 4;
    string nombre = 5;
    string poblac = 6;
    string prov = 7;
}

message ListaAdmin {
	repeated AdministradorR lista = 1;
}